// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`add-page getFunctionalityDetails case 2: empty page 1`] = `
Object {
  "description": "To add a new page, provide a valid project root or application path. \\"/Users/D063593/SAPDevelop/git/open-ux-tools/packages/fiori-mcp-server/test/test-data/ai-created-cap-add-page-copy/app/managetravels\\" is not valid",
  "id": "add-page",
  "name": "Invalid Project Root or Application Path",
  "parameters": Array [],
}
`;

exports[`add-page getFunctionalityDetails case 3: one or more pages 1`] = `
Object {
  "description": "To add a new page, provide a valid project root or application path. \\"/Users/D063593/SAPDevelop/git/open-ux-tools/packages/fiori-mcp-server/test/test-data/ai-created-cap-add-page-copy/app/managetravels\\" is not valid",
  "id": "add-page",
  "name": "Invalid Project Root or Application Path",
  "parameters": Array [],
}
`;

exports[`delete-page getFunctionalityDetails case 2: zero or more pages 1`] = `
Object {
  "description": "To delete a page, provide a valid project root or application path. \\"/Users/D063593/SAPDevelop/git/open-ux-tools/packages/fiori-mcp-server/test/test-data/ai-created-cap-add-page-copy/app/managetravels\\" is not valid",
  "id": "delete-page",
  "name": "Invalid Project Root or Application Path",
  "parameters": Array [],
}
`;
